--- a/index.html
+++ b/index.html
@@ -121,33 +121,39 @@
     </div>
 
     <script>
+
 function checkGestureOutput() {
     const gestureOutput = document.getElementById("gesture_output");
     const mainGesture = document.getElementById("main_gesture");
+    const modal = document.getElementById("survey_popup");
 
     if (gestureOutput && mainGesture) {
         const currentText = gestureOutput.innerText.trim();
+
         const actionMatch = currentText.match(/Action: (\w+)/);
 
         if (actionMatch && actionMatch[1]) {
-            const action = actionMatch[1];
+            const action = actionMatch[1]; 
+
+            // If main_gesture is visible
             if (mainGesture.style.display !== 'none') {
                 if (action === "Like") {
+                    alert("Like is OK");
                     showDiv('star_gesture');
                 }
                 else if (action === "Dislike") {
                     showDiv('voice_gesture');
                 }
-              else if (action === "Close") {
-                    span.onclick = function() {
-                    modal.style.display = "none";
-}
-                }
+            }
+            if (action === "Close" && modal) {
+                modal.style.display = "none";
             }
         }
     }
 }
+
 setInterval(checkGestureOutput, 1000);
+
 function showDiv(divId) {
     const divs = ['main_gesture', 'star_gesture', 'voice_gesture', 'thank_you'];
     divs.forEach(id => {
@@ -159,7 +165,6 @@ function showDiv(divId) {
         }
     });
 }
-
     </script>
 
           </div>
