--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
           </div>
           <div id="voice_gesture" style="display: none;">
             <div class="LDimage-container">
-              <img src="assets/img/stars.png" alt="stars Gesture">
-            </div>
-            <div class="LDimage-container">
-              <img src="assets/img/number.png" alt="stars Gesture">
+              <img src="assets/img/microphone.png" alt="Voice Gesture">
             </div>
           </div>
           <div id="thank_you" style="display: none;">
@@ -120,47 +117,7 @@
       </div>
     </div>
 
-    <script>
-
-function checkGestureOutput() {
-    const gestureOutput = document.getElementById("gesture_output");
-    const mainGesture = document.getElementById("main_gesture");
-    const modal = document.getElementById("survey_popup");
-
-    if (gestureOutput && mainGesture) {
-        const currentText = gestureOutput.innerText.trim();
-        const actionMatch = currentText.match(/Action: (\w+)/);
-        if (actionMatch && actionMatch[1]) {
-            const action = actionMatch[1]; 
-            if (mainGesture.style.display !== 'none') {
-                if (action === "Like") {
-                    showDiv('star_gesture');
-                }
-                else if (action === "Dislike") {
-                    showDiv('voice_gesture');
-                }
-            }
-            if (action === "Close" && modal) {
-                modal.style.display = "none";
-            }
-        }
-    }
-}
-
-setInterval(checkGestureOutput, 1000);
-
-function showDiv(divId) {
-    const divs = ['main_gesture', 'star_gesture', 'voice_gesture', 'thank_you'];
-    divs.forEach(id => {
-        const div = document.getElementById(id);
-        if (id === divId) {
-            div.style.display = 'block';
-        } else {
-            div.style.display = 'none';
-        }
-    });
-}
-    </script>
+    <script src="assets/MediaPipe_lib/div_actions.js"></script>
 
           </div>
 
