--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div id="gesture_output"></div>
           <div id="main_gesture">
             <div class="LDimage-container">
-              <img src="assets/img/Like.jpg" alt="Like Gesture">
+              <img id="Likeimg" src="assets/img/Like.jpg" alt="Like Gesture">
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
