--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <div class="LDimage-container">
               <img id="Likeimg" src="assets/img/Like.jpg" alt="Like Gesture">
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
+              <img id="OPsubmit" src="assets/img/OP.png" style="display:none" alt="Submit gesture">
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
             <script src="assets/MediaPipe_lib/div_actions.js"></script>
