--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           </div>
           <div id="voice_gesture" style="display: none;">
             <div class="LDimage-container">
+              <div><h3>You can record your feedback for us</h3></div>
               <img src="assets/img/microphone.png" alt="Voice Gesture">
             </div>
           </div>
