--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
           </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
-              <img src="assets/img/stars.png" alt="stars Gesture">
+              <img src="assets/img/star_input.jpg" alt="stars Gesture">
+               <img src="assets/img/star_input.jpg" alt="stars Gesture">
+               <img src="assets/img/star_input.jpg" alt="stars Gestur">
+              
             </div>
             <div class="LDimage-container">
               <img src="assets/img/number.png" alt="stars Gesture">
