--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
               <img src="assets/img/star_input.jpg" alt="stars Gesture">
                <img src="assets/img/star_input.jpg" alt="stars Gesture">
                <img src="assets/img/star_input.jpg" alt="stars Gestur">
-              
             </div>
             <div class="LDimage-container">
-              <img src="assets/img/number.png" alt="stars Gesture">
+              <img src="assets/img/1_input.jpg" alt="stars 1">
+              <img src="assets/img/2_input.jpg" alt="stars 1">
+              <img src="assets/img/3_input.jpg" alt="stars 1">
             </div>
           </div>
           <div id="voice_gesture" style="display: none;">
