--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
           </div>
           <div id="voice_gesture" style="display: none;">
             <div class="LDimage-container">
-              <div><h3>You can record your feedback for us</h3></div>
+              <div><h3>You can record your feedback for us</h3></div><br>
+              <img id="OPsubmit" src="assets/img/OP.png" style="display:none" alt="Submit gesture">
               <img src="assets/img/microphone.png" alt="Voice Gesture">
             </div>
           </div>
