--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             </div>
             <div class="LDimage-container">
               <img src="assets/img/thanks.png" alt="Thank you">
+              <img src="assets/img/close.png" alt="close Gesture">
             </div>
           </div>
         </div>
