--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
-              <img src="assets/img/star_input.jpg" alt="stars Gesture">
-               <img src="assets/img/star_input.jpg" alt="stars Gesture">
-               <img src="assets/img/star_input.jpg" alt="stars Gestur">
+              <img id="star1" src="assets/img/star_input.jpg" style="filter: grayscale(100%);" alt="stars Gesture">
+              <img id="star2" src="assets/img/star_input.jpg" style="filter: grayscale(100%);" alt="stars Gesture">
+              <img id="star3" src="assets/img/star_input.jpg" style="filter: grayscale(100%);" alt="stars Gesture">
             </div>
             <div class="LDimage-container">
               <img src="assets/img/1_input.jpg" alt="stars 1">
