--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <img src="assets/img/2_input.jpg" alt="stars 1">
               <img src="assets/img/3_input.jpg" alt="stars 1">
             </div>
+            <div id="error-message" style="display: none; color: red; font-weight: bold;"></div>
           </div>
           <div id="voice_gesture" style="display: none;">
             <div class="LDimage-container">
