--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <script src="assets/MediaPipe_lib/div_actions.js"></script>
           </div>
           <div id="star_gesture" style="display: none;">
+            <div id="error-message" style="display: none; color: red; font-weight: bold;text-align:center;font-size:16px;"></div>
             <div class="LDimage-container">
               <img id="star1" src="assets/img/star_input.jpg" style="filter: grayscale(100%);" alt="stars Gesture">
               <img id="star2" src="assets/img/star_input.jpg" style="filter: grayscale(100%);" alt="stars Gesture">
@@ -104,7 +105,7 @@
               <img src="assets/img/2_input.jpg" alt="stars 1">
               <img src="assets/img/3_input.jpg" alt="stars 1">
             </div>
-            <div id="error-message" style="display: none; color: red; font-weight: bold;"></div>
+            
           </div>
           <div id="voice_gesture" style="display: none;">
             <div class="LDimage-container">
